--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,3 +46,4 @@ play.i18n.langs = [ "en" ]
 # Dependency Injection modules
 play.modules.enabled += "modules.PlacesModule"
 
+app.foursquare.baseUrl = "https://api.foursquare.com"
