Externalised client id and secret to config file.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,3 +47,5 @@ play.i18n.langs = [ "en" ]
 play.modules.enabled += "modules.PlacesModule"
 
 app.foursquare.baseUrl = "https://api.foursquare.com"
+app.foursquare.clientId = "G13G1JGM3EA4FXORGPFBMPGBDSBMYMR1S1KYV2OAUF33PQV4"
+app.foursquare.clientSecret = "ADGLVHHMGASP4RRKDY0O2UKQZKUD1XLLJV505M0JJ3A4LSB2"
